--- a/index.html
+++ b/index.html
@@ -22,18 +22,31 @@
                 padding: 20px;
                 box-sizing: border-box;
             }
+            .center-inner {
+                margin-left: 20px;
+                margin-right: 160px;
+            }
             li {
   margin: 30px 0;
 }
 ul {
     margin-left: -20px
 }
+@media (max-width: 768px) {
+                .center-container {
+                    width: 80%;
+                }
+            }
+            .center-inner {
+                margin-left: 20px;
+                margin-right: 20px;
+            }
         </style>
     </head>
 <body style="background-image: url('bg.png');">
 
     <div class="center-container">
-        <div style="margin-left: 20px;margin-right: 160px;">
+        <div class="center-inner">
         <h2 style="font-family:'Courier New'">Xuheng Cai <span style="font-family:'KaiTi';font-size: 80%;">蔡旭恒</span></h1>
         <br>
         <br>
