--- a/index.html
+++ b/index.html
@@ -27,19 +27,24 @@
                 margin-right: 160px;
             }
             li {
-  margin: 30px 0;
-}
-ul {
-    margin-left: -20px
-}
+            margin: 30px 0;
+            }
+            ul {
+                margin-left: -20px
+            }
+            a {
+                color: black;
+                text-decoration: underline;
+                text-decoration-style: dotted;
+            }
 @media (max-width: 768px) {
                 .center-container {
                     width: 80%;
                 }
-            }
-            .center-inner {
+                .center-inner {
                 margin-left: 20px;
                 margin-right: 20px;
+            }
             }
         </style>
     </head>
@@ -50,7 +55,8 @@ ul {
         <h2 style="font-family:'Courier New'">Xuheng Cai <span style="font-family:'KaiTi';font-size: 80%;">蔡旭恒</span></h1>
         <br>
         <br>
-        <p style="font-family:'Courier New'">I'm a science fiction writer based in Hong Kong and Guangzhou. I work as a technologist for an investment bank.</p>
+        <p style="font-family:'Courier New'">I'm a science fiction writer based in Hong Kong and Guangzhou. I work as a technologist for an investment bank. I got my bachelor's degree from HKU and master's degree from Stanford, both in Computer Science.</p>
+        <p style="font-family:'Courier New'">Contact me at: <a href="mailto:xuheng@cs.stanford.edu">xuheng@cs.stanford.edu</a></p>
         <br>
         <br>
         <h4 style="font-family:'Courier New'">Selected Short Stories</h1>
