--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <h4 style="font-family:'Courier New'">Selected Short Stories</h1>
             <ul style="font-family:'Courier New'">
                 <li>Like Dew and Lightning, to appear in Galaxy's Edge, 2025. <br> <br> <small><i>《如露亦如电》, 即将刊于《银河边缘》, 2025年。 </i></small></li>
+                <li>Fishbone, published in Youth, August 2025. <br> <br> <small><i>《鱼骨》, 刊于《青春》, 2025年8月。 </i></small></li>
                 <li>He Who I'd Known, published in Science Fiction World, June 2025. <br> <br> <small><i>《故人来》, 刊于《科幻世界》, 2025年6月。 </i></small></li>
                 <li>Solitary In The Wild, published in Petrel, Jan 2024. <br> <br> <small><i>《独隐绿原》, 刊于《海燕》, 2024年1月。 </i></small></li>
                 <li>All But Life Are Lively, published in Petrel, Apr 2023. <br> <br> <small><i>《生命之外，一切生机勃勃》, 刊于《海燕》, 2023年4月。  </i></small></li>
